--- a/main.css
+++ b/main.css
@@ -11,12 +11,14 @@ body {
 a {
   color: inherit;
 }
+
 .container {
   display: flex;
   height: 100vh;
-  background: url("/images/free-background-wallpaper-1.jpg");
+  background: url('images/free-background-wallpaper-1.jpg');
   background-size: cover;
 }
+
 
 .glass-container {
   width: 80%;
@@ -109,45 +111,44 @@ a {
     overflow: hidden;
     display: flex;
     flex-direction: column-reverse;
-    
   }
   .picture-container {
     margin: auto;
     margin-bottom: 50px;
   }
-  .introduction-container p{
-      width: 100%;
-      padding: 0;
+  .introduction-container p {
+    width: 100%;
+    padding: 0;
   }
   .contact-list li {
     padding: 4px;
     border: 2px white solid;
     margin: 5px;
     text-align: center;
-}
+  }
 }
 
 @media (max-width: 550px) {
-    .picture-container{
-        margin: 10px auto;
-    }
-    .introduction-container{
-        padding: 5px;
-    }
-    .picture-container img {
-        width: 150px;
-        height: 150px;
-    }
-    .contact-list{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        overflow: hidden;
-        padding-bottom: 10px;
-    }
-    .contact-list li {
-        padding: 4px;
-        border: 2px white solid;
-        margin: 2px;
-    }
+  .picture-container {
+    margin: 10px auto;
+  }
+  .introduction-container {
+    padding: 5px;
+  }
+  .picture-container img {
+    width: 150px;
+    height: 150px;
+  }
+  .contact-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    padding-bottom: 10px;
+  }
+  .contact-list li {
+    padding: 4px;
+    border: 2px white solid;
+    margin: 2px;
+  }
 }
