--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ a {
 .container {
   display: flex;
   height: 100vh;
-  background: url('../images/free-background-wallpaper-1.jpg');
+  background: url('./images/free-background-wallpaper-1.jpg');
   background-size: cover;
 }
 
